trying to fix alignment issue

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   gap: 1em;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
 }
 
